<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_name">Please enter your name:</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="check">validate answer\n</string>
    <string name="image_flag">goal</string>
</resources>
